--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -2,50 +2,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Fitness Tracker{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+<meta charset="UTF-8">
+<title>FitnessTrackerBF</title>
+<link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
+
 <body>
 
-<nav>
-    <div>
+<nav class="navbar">
+
+    <a href="{% url 'home' %}" class="logo">
+        <img id="logo-img" src="{% static 'images/logo-light.png' %}" class="logo-img">
+        <span>FitnessTrackerBF</span>
+    </a>
+
+    <div class="nav-center">
         <a href="{% url 'home' %}">Home</a>
-        <a href="{% url 'exercises' %}">Exercises</a>
-        <a href="{% url 'goals' %}">Goals</a>
-        <a href="{% url 'workouts' %}">Workouts</a>
-    </div>
-    <div>
-        <button onclick="toggleMode()">🌙</button>
-        <a href="?lang=hr">🇭🇷</a>
-        <a href="?lang=en">🇬🇧</a>
-        <a href="?lang=de">🇩🇪</a>
+        <a href="{% url 'about' %}">About</a>
 
         {% if user.is_authenticated %}
-        <form method="POST" action="{% url 'logout' %}">
-            {% csrf_token %}
-            <button type="submit" class="btn-logout">Logout</button>
-        </form>
-        {% else %}
-        <a href="{% url 'login' %}">Login</a>
-        <a href="{% url 'register' %}">Register</a>
+            <a href="{% url 'exercises' %}">Exercises</a>
+            <a href="{% url 'goals' %}">Goals</a>
+            <a href="{% url 'workouts' %}">Workouts</a>
         {% endif %}
     </div>
+
+    <div class="nav-right">
+
+        <button onclick="toggleMode()">🌙</button>
+
+        {% if user.is_authenticated %}
+            <form method="POST" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button class="btn-logout" type="submit">Logout</button>
+            </form>
+        {% else %}
+            <a class="btn" href="{% url 'login' %}">Login</a>
+            <a class="btn-outline" href="{% url 'register' %}">Register</a>
+        {% endif %}
+
+    </div>
+
 </nav>
 
 <div class="container">
-    {% block content %}{% endblock %}
+{% block content %}{% endblock %}
 </div>
 
 <script>
-if(localStorage.getItem("mode")=="dark"){
+
+if(localStorage.getItem("mode")==="dark"){
  document.body.classList.add("dark")
 }
+
+const logo=document.getElementById("logo-img")
+
+function setLogo(){
+ logo.src = document.body.classList.contains("dark")
+ ? "/static/images/logo-dark.png"
+ : "/static/images/logo-light.png"
+}
+
+setLogo()
+
 function toggleMode(){
  document.body.classList.toggle("dark")
  localStorage.setItem("mode",
- document.body.classList.contains("dark")?"dark":"light")
+ document.body.classList.contains("dark") ? "dark":"light")
+ setLogo()
 }
+
 </script>
 
 </body>
