--- a/tracker/templates/about.html
+++ b/tracker/templates/about.html
@@ -1,19 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h1>About</h1>
-
-<p>
-This project was created as a university web programming project.
-</p>
-
-<p>
-Authors:
-</p>
-
-<ul>
-<li>Filip Maglić</li>
-<li>Benjamin Blazeković</li>
-</ul>
-
+    <h1>About Us</h1>
+    <p>This project was created as a university web programming project.</p>
+    <h3>Authors:</h3>
+    <ul>
+        <li>Filip Maglić</li>
+        <li>Benjamin Blažeković</li>
+    </ul>
 {% endblock %}
