--- a/tracker/templates/registration/login.html
+++ b/tracker/templates/registration/login.html
@@ -1,33 +1,45 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 
 <div class="auth-card">
+    <h2>Login</h2>
+    <form method="post">
+        {% csrf_token %}
+        
+        <div class="auth-field-group">
+            <label>Username</label>
+            {{ form.username }}
+        </div>
 
-<h2>Login</h2>
+        <div class="auth-field-group">
+            <label>Password</label>
+            <div class="password-wrapper">
+                {{ form.password }}
+                <img src="{% static 'images/passwordnotvisable.png' %}" 
+                     id="eye-icon" 
+                     class="eye-icon" 
+                     onclick="togglePassword()" 
+                     alt="Toggle Password">
+            </div>
+        </div>
 
-<form method="post">
-{% csrf_token %}
-
-<label>Username</label>
-{{ form.username }}
-
-<div class="password-box">
-<label>Password</label>
-{{ form.password }}
-<span onclick="togglePassword()">👁</span>
-</div>
-
-<button type="submit">Login</button>
-
-</form>
-
+        <button type="submit">Login</button>
+    </form>
 </div>
 
 <script>
 function togglePassword(){
- let field=document.getElementById("id_password")
- field.type = field.type==="password" ? "text" : "password"
+    let field = document.getElementById("id_password");
+    let icon = document.getElementById("eye-icon");
+    
+    if (field.type === "password") {
+        field.type = "text";
+        icon.src = "{% static 'images/passwordvisable.png' %}";
+    } else {
+        field.type = "password";
+        icon.src = "{% static 'images/passwordnotvisable.png' %}";
+    }
 }
 </script>
-
 {% endblock %}
