--- a/tracker/templates/registration/logout.html
+++ b/tracker/templates/registration/logout.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Logged out</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-</head>
-<body class="auth-body">
+{% extends 'base.html' %}
+{% block content %}
 
 <div class="auth-card">
     <h2>You have been logged out</h2>
     <p>Thanks for using Fitness Tracker 💪</p>
 
-    <a href="{% url 'login' %}" class="btn-primary">Login again</a>
+    <br>
+    <!-- Koristi .btn klasu koja je sada tamno zelena u CSS-u -->
+    <a href="{% url 'login' %}" class="btn">Login again</a>
 </div>
 
-</body>
-</html>
+{% endblock %}
